Help, SV, input, output, blablabla in the main and thats it, bottond is acoustic