@@ -7,7 +7,7 @@ import java.util.List;
 public class SelectClosest implements SelectionStrategy{
     @Override
     public Animal select(Animal a, List<Animal> as) {
-        Animal closest = as.get(0);
+        Animal closest = as.getFirst();
         for (Animal animal : as) {
             if (a.get_position().distanceTo(animal.get_position()) < a.get_position().distanceTo(closest.get_position())) {
                 closest = animal;
